# Quantum-Circuit-Simulator

./: .gitignore  CMakeLists.txt  Gate.cpp  Gate.hpp  QuantumRegister.hpp  Qubit.cpp  Qubit.hpp  README.md  test.cpp
include/: Gate.hpp  Quantum.hpp  QuantumRegister.hpp  Qubit.hpp
src/: Gate.cpp  QuantumRegister.cpp  Qubit.cpp  test.cpp
tests/: CMakeLists.txt  test_gates.cpp
